--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "date-fns": "^3.3.1",
     "dayjs": "^1.11.10",
     "moment": "^2.30.1",
     "momentjs": "^2.0.0",
@@ -45,6 +46,7 @@
     ]
   },
   "devDependencies": {
+    "@types/date-fns": "^2.6.0",
     "react-router-dom": "^6.22.0"
   }
 }
