--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@auth0/auth0-react": "^2.2.4",
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.15.7",
@@ -12,10 +13,12 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@types/jwt-decode": "^3.1.0",
     "axios": "^1.6.7",
     "cors": "^2.8.5",
     "date-fns": "^3.3.1",
     "dayjs": "^1.11.10",
+    "jwt-decode": "^4.0.0",
     "moment": "^2.30.1",
     "momentjs": "^2.0.0",
     "react": "^18.2.0",
