--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
+    "tailwindcss": "^3.4.9",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -54,6 +55,8 @@
   },
   "devDependencies": {
     "@types/date-fns": "^2.6.0",
+    "autoprefixer": "^10.4.20",
+    "postcss": "^8.4.41",
     "react-router-dom": "^6.22.0"
   }
 }
