Visualização e submissão de textos com parágrafos

--- a/package.json
+++ b/package.json
@@ -15,6 +15,13 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@tiptap/extension-color": "^2.6.5",
+    "@tiptap/extension-list-item": "^2.6.5",
+    "@tiptap/extension-placeholder": "^2.6.6",
+    "@tiptap/extension-text-style": "^2.6.5",
+    "@tiptap/pm": "^2.6.5",
+    "@tiptap/react": "^2.6.5",
+    "@tiptap/starter-kit": "^2.6.5",
     "@types/jwt-decode": "^3.1.0",
     "axios": "^1.6.7",
     "cors": "^2.8.5",
@@ -26,6 +33,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
+    "sass": "^1.77.8",
     "tailwindcss": "^3.4.9",
     "web-vitals": "^2.1.4"
   },
