--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@tiptap-pro/extension-unique-id": "^2.11.1",
+    "@tiptap/extension-character-count": "^2.6.6",
     "@tiptap/extension-color": "^2.6.5",
     "@tiptap/extension-list-item": "^2.6.5",
     "@tiptap/extension-placeholder": "^2.6.6",
@@ -27,6 +29,7 @@
     "cors": "^2.8.5",
     "date-fns": "^3.3.1",
     "dayjs": "^1.11.10",
+    "htmlparser2": "^9.1.0",
     "jwt-decode": "^4.0.0",
     "moment": "^2.30.1",
     "momentjs": "^2.0.0",
@@ -35,6 +38,7 @@
     "react-scripts": "5.0.1",
     "sass": "^1.77.8",
     "tailwindcss": "^3.4.9",
+    "uuid": "^10.0.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
